Use a default tag for unset or invalid generators.